--- a/translations/security.es.xlf
+++ b/translations/security.es.xlf
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="en">
-  <file id="security.en">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="es">
+  <file id="security.es">
     <unit id="baI_ZxO" name="An authentication exception occurred.">
       <notes>
         <note category="german">Es ist ein Fehler bei der Authentifikation aufgetreten.</note>
       </notes>
       <segment>
         <source>An authentication exception occurred.</source>
-        <target>An authentication exception occurred.</target>
+        <target>Ocurrió un error de autenticación.</target>
       </segment>
     </unit>
     <unit id="OETylMq" name="Authentication credentials could not be found.">
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>Authentication credentials could not be found.</source>
-        <target>Authentication credentials could not be found.</target>
+        <target>Credenciales de autenticación no encontradas.</target>
       </segment>
     </unit>
     <unit id="3RJINQ0" name="Authentication request could not be processed due to a system problem.">
@@ -25,7 +25,7 @@
       </notes>
       <segment>
         <source>Authentication request could not be processed due to a system problem.</source>
-        <target>Authentication request could not be processed due to a system problem.</target>
+        <target>La solicitud de autenticación no se pudo procesar debido a un problema del sistema.</target>
       </segment>
     </unit>
     <unit id="qr0aiUo" name="Invalid credentials.">
@@ -34,7 +34,7 @@
       </notes>
       <segment>
         <source>Invalid credentials.</source>
-        <target>Invalid credentials.</target>
+        <target>Credenciales no válidas.</target>
       </segment>
     </unit>
     <unit id="zrJWK0F" name="Cookie has already been used by someone else.">
@@ -43,7 +43,7 @@
       </notes>
       <segment>
         <source>Cookie has already been used by someone else.</source>
-        <target>Cookie has already been used by someone else.</target>
+        <target>La "cookie" ya ha sido usada por otra persona.</target>
       </segment>
     </unit>
     <unit id="blC0fXX" name="Not privileged to request the resource.">
@@ -52,7 +52,7 @@
       </notes>
       <segment>
         <source>Not privileged to request the resource.</source>
-        <target>Not privileged to request the resource.</target>
+        <target>No tienes permisos para solicitar el recurso.</target>
       </segment>
     </unit>
     <unit id="dLzMRPR" name="Invalid CSRF token.">
@@ -61,7 +61,7 @@
       </notes>
       <segment>
         <source>Invalid CSRF token.</source>
-        <target>Invalid CSRF token.</target>
+        <target>Ficha CSRF no válida.</target>
       </segment>
     </unit>
     <unit id="PhhlLem" name="No authentication provider found to support the authentication token.">
@@ -70,7 +70,7 @@
       </notes>
       <segment>
         <source>No authentication provider found to support the authentication token.</source>
-        <target>No authentication provider found to support the authentication token.</target>
+        <target>No se encontró un proveedor de autenticación que soporte la ficha de autenticación.</target>
       </segment>
     </unit>
     <unit id="v_RS21A" name="No session available, it either timed out or cookies are not enabled.">
@@ -79,7 +79,7 @@
       </notes>
       <segment>
         <source>No session available, it either timed out or cookies are not enabled.</source>
-        <target>No session available, it either timed out or cookies are not enabled.</target>
+        <target>No hay ninguna sesión disponible, esta ha expirado o las cookies no están habilitadas.</target>
       </segment>
     </unit>
     <unit id="EYCKpDH" name="No token could be found.">
@@ -88,7 +88,7 @@
       </notes>
       <segment>
         <source>No token could be found.</source>
-        <target>No token could be found.</target>
+        <target>No se encontró ninguna ficha.</target>
       </segment>
     </unit>
     <unit id="z3cOUZo" name="Username could not be found.">
@@ -97,7 +97,7 @@
       </notes>
       <segment>
         <source>Username could not be found.</source>
-        <target>Username could not be found.</target>
+        <target>Nombre de usuario no encontrado.</target>
       </segment>
     </unit>
     <unit id="By5eLYM" name="Account has expired.">
@@ -106,7 +106,7 @@
       </notes>
       <segment>
         <source>Account has expired.</source>
-        <target>Account has expired.</target>
+        <target>La cuenta ha expirado.</target>
       </segment>
     </unit>
     <unit id="YfZhiuA" name="Credentials have expired.">
@@ -115,7 +115,7 @@
       </notes>
       <segment>
         <source>Credentials have expired.</source>
-        <target>Credentials have expired.</target>
+        <target>Las credenciales han expirado.</target>
       </segment>
     </unit>
     <unit id="NrSSfLs" name="Account is disabled.">
@@ -124,7 +124,7 @@
       </notes>
       <segment>
         <source>Account is disabled.</source>
-        <target>Account is disabled.</target>
+        <target>La cuenta está deshabilitada.</target>
       </segment>
     </unit>
     <unit id="O5ZyxHr" name="Account is locked.">
@@ -133,7 +133,7 @@
       </notes>
       <segment>
         <source>Account is locked.</source>
-        <target>Account is locked.</target>
+        <target>La cuenta está bloqueada.</target>
       </segment>
     </unit>
     <unit id="gd.MOnZ" name="Too many failed login attempts, please try again later.">
@@ -142,7 +142,7 @@
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again later.</source>
-        <target>Too many failed login attempts, please try again later.</target>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtalo de nuevo más tarde.</target>
       </segment>
     </unit>
     <unit id="l9VYRj0" name="Invalid or expired login link.">
@@ -151,7 +151,25 @@
       </notes>
       <segment>
         <source>Invalid or expired login link.</source>
-        <target>Invalid or expired login link.</target>
+        <target>Enlace de inicio de sesión inválido o expirado.</target>
+      </segment>
+    </unit>
+    <unit id="9qGC3hG" name="Too many failed login attempts, please try again in %minutes% minute.">
+      <notes>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in einer Minute noch einmal.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minute.</source>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en %minutes% minuto.</target>
+      </segment>
+    </unit>
+    <unit id="AJR3lMs" name="Too many failed login attempts, please try again in %minutes% minutes.">
+      <notes>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in %minutes% Minuten noch einmal.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en %minutes% minutos.</target>
       </segment>
     </unit>
     <unit id="rzOAb51" name="Too many failed login attempts, please try again in {minutes} minute.">
@@ -160,7 +178,7 @@
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again in {minutes} minute.</source>
-        <target>Too many failed login attempts, please try again in {minutes} minute.</target>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en {minutes} minuto.</target>
       </segment>
     </unit>
     <unit id="H7z6JkT" name="Too many failed login attempts, please try again in {minutes} minutes.">
@@ -169,7 +187,7 @@
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again in {minutes} minutes.</source>
-        <target>Too many failed login attempts, please try again in {minutes} minutes.</target>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en {minutes} minutos.</target>
       </segment>
     </unit>
   </file>
