--- a/translations/security.fr.xlf
+++ b/translations/security.fr.xlf
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="es">
-  <file id="security.es">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="fr">
+  <file id="security.fr">
     <unit id="baI_ZxO" name="An authentication exception occurred.">
       <notes>
         <note category="german">Es ist ein Fehler bei der Authentifikation aufgetreten.</note>
       </notes>
       <segment>
         <source>An authentication exception occurred.</source>
-        <target>Ocurrió un error de autenticación.</target>
+        <target>Une exception d'authentification s'est produite.</target>
       </segment>
     </unit>
     <unit id="OETylMq" name="Authentication credentials could not be found.">
@@ -16,7 +16,7 @@
       </notes>
       <segment>
         <source>Authentication credentials could not be found.</source>
-        <target>Credenciales de autenticación no encontradas.</target>
+        <target>Les identifiants d'authentification n'ont pas pu être trouvés.</target>
       </segment>
     </unit>
     <unit id="3RJINQ0" name="Authentication request could not be processed due to a system problem.">
@@ -25,7 +25,7 @@
       </notes>
       <segment>
         <source>Authentication request could not be processed due to a system problem.</source>
-        <target>La solicitud de autenticación no se pudo procesar debido a un problema del sistema.</target>
+        <target>La requête d'authentification n'a pas pu être executée à cause d'un problème système.</target>
       </segment>
     </unit>
     <unit id="qr0aiUo" name="Invalid credentials.">
@@ -34,7 +34,7 @@
       </notes>
       <segment>
         <source>Invalid credentials.</source>
-        <target>Credenciales no válidas.</target>
+        <target>Identifiants invalides.</target>
       </segment>
     </unit>
     <unit id="zrJWK0F" name="Cookie has already been used by someone else.">
@@ -43,7 +43,7 @@
       </notes>
       <segment>
         <source>Cookie has already been used by someone else.</source>
-        <target>La "cookie" ya ha sido usada por otra persona.</target>
+        <target>Le cookie a déjà été utilisé par quelqu'un d'autre.</target>
       </segment>
     </unit>
     <unit id="blC0fXX" name="Not privileged to request the resource.">
@@ -52,7 +52,7 @@
       </notes>
       <segment>
         <source>Not privileged to request the resource.</source>
-        <target>No tienes permisos para solicitar el recurso.</target>
+        <target>Privilèges insuffisants pour accéder à la ressource.</target>
       </segment>
     </unit>
     <unit id="dLzMRPR" name="Invalid CSRF token.">
@@ -61,7 +61,7 @@
       </notes>
       <segment>
         <source>Invalid CSRF token.</source>
-        <target>Ficha CSRF no válida.</target>
+        <target>Jeton CSRF invalide.</target>
       </segment>
     </unit>
     <unit id="PhhlLem" name="No authentication provider found to support the authentication token.">
@@ -70,7 +70,7 @@
       </notes>
       <segment>
         <source>No authentication provider found to support the authentication token.</source>
-        <target>No se encontró un proveedor de autenticación que soporte la ficha de autenticación.</target>
+        <target>Aucun fournisseur d'authentification n'a été trouvé pour supporter le jeton d'authentification.</target>
       </segment>
     </unit>
     <unit id="v_RS21A" name="No session available, it either timed out or cookies are not enabled.">
@@ -79,7 +79,7 @@
       </notes>
       <segment>
         <source>No session available, it either timed out or cookies are not enabled.</source>
-        <target>No hay ninguna sesión disponible, esta ha expirado o las cookies no están habilitadas.</target>
+        <target>Aucune session disponible, celle-ci a expiré ou les cookies ne sont pas activés.</target>
       </segment>
     </unit>
     <unit id="EYCKpDH" name="No token could be found.">
@@ -88,7 +88,7 @@
       </notes>
       <segment>
         <source>No token could be found.</source>
-        <target>No se encontró ninguna ficha.</target>
+        <target>Aucun jeton n'a pu être trouvé.</target>
       </segment>
     </unit>
     <unit id="z3cOUZo" name="Username could not be found.">
@@ -97,7 +97,7 @@
       </notes>
       <segment>
         <source>Username could not be found.</source>
-        <target>Nombre de usuario no encontrado.</target>
+        <target>Le nom d'utilisateur n'a pas pu être trouvé.</target>
       </segment>
     </unit>
     <unit id="By5eLYM" name="Account has expired.">
@@ -106,7 +106,7 @@
       </notes>
       <segment>
         <source>Account has expired.</source>
-        <target>La cuenta ha expirado.</target>
+        <target>Le compte a expiré.</target>
       </segment>
     </unit>
     <unit id="YfZhiuA" name="Credentials have expired.">
@@ -115,7 +115,7 @@
       </notes>
       <segment>
         <source>Credentials have expired.</source>
-        <target>Las credenciales han expirado.</target>
+        <target>Les identifiants ont expiré.</target>
       </segment>
     </unit>
     <unit id="NrSSfLs" name="Account is disabled.">
@@ -124,7 +124,7 @@
       </notes>
       <segment>
         <source>Account is disabled.</source>
-        <target>La cuenta está deshabilitada.</target>
+        <target>Le compte est désactivé.</target>
       </segment>
     </unit>
     <unit id="O5ZyxHr" name="Account is locked.">
@@ -133,7 +133,7 @@
       </notes>
       <segment>
         <source>Account is locked.</source>
-        <target>La cuenta está bloqueada.</target>
+        <target>Le compte est bloqué.</target>
       </segment>
     </unit>
     <unit id="gd.MOnZ" name="Too many failed login attempts, please try again later.">
@@ -142,7 +142,7 @@
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again later.</source>
-        <target>Demasiados intentos fallidos de inicio de sesión, inténtalo de nuevo más tarde.</target>
+        <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer plus tard.</target>
       </segment>
     </unit>
     <unit id="l9VYRj0" name="Invalid or expired login link.">
@@ -151,25 +151,25 @@
       </notes>
       <segment>
         <source>Invalid or expired login link.</source>
-        <target>Enlace de inicio de sesión inválido o expirado.</target>
+        <target>Lien de connexion invalide ou expiré.</target>
       </segment>
     </unit>
-    <unit id="rzOAb51" name="Too many failed login attempts, please try again in {minutes} minute.">
+    <unit id="9qGC3hG" name="Too many failed login attempts, please try again in %minutes% minute.">
       <notes>
         <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in einer Minute noch einmal.</note>
       </notes>
       <segment>
-        <source>Too many failed login attempts, please try again in {minutes} minute.</source>
-        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en {minutes} minuto.</target>
+        <source>Too many failed login attempts, please try again in %minutes% minute.</source>
+        <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer dans %minutes% minute.</target>
       </segment>
     </unit>
-    <unit id="H7z6JkT" name="Too many failed login attempts, please try again in {minutes} minutes.">
+    <unit id="AJR3lMs" name="Too many failed login attempts, please try again in %minutes% minutes.">
       <notes>
-        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in {minutes} Minuten noch einmal.</note>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in %minutes% Minuten noch einmal.</note>
       </notes>
       <segment>
-        <source>Too many failed login attempts, please try again in {minutes} minutes.</source>
-        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en {minutes} minutos.</target>
+        <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
+        <target>Plusieurs tentatives de connexion ont échoué, veuillez réessayer dans %minutes% minutes.</target>
       </segment>
     </unit>
   </file>
