--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -7763,7 +7763,7 @@
       </notes>
       <segment>
         <source>Du hast {count} Aktionspunkt(e) benutzt.</source>
-        <target>{count, plural, =0 {Vous avez utilisé {count} point d'action} one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
+        <target>{raw_count, plural, =0 {Vous avez utilisé {count} point d'action} one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
       </segment>
     </unit>
     <unit id="KYKuCCa">
@@ -15745,7 +15745,7 @@
       </notes>
       <segment>
         <source>Du hast dafür {count} Aktionspunkt(e) verbraucht.</source>
-        <target>Vous avez utilisé {count} point(s) d'action.</target>
+        <target>{raw_count, plural, =0 {Vous avez utilisé {count} point d'action} one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
       </segment>
     </unit>
     <unit id="tTMCru5">
