--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -574,7 +574,7 @@
       </notes>
       <segment>
         <source>Routen</source>
-        <target>Expédition</target>
+        <target>Expéditions</target>
       </segment>
     </unit>
     <unit id="wkJT.qQ" name="Stadttor">
@@ -10652,7 +10652,7 @@
       </notes>
       <segment>
         <source>Mark.</source>
-        <target>Marqueurs</target>
+        <target>Marqu.</target>
       </segment>
     </unit>
     <unit id="z3Y3jVt" name="Anonyme Beschwerde">
@@ -20262,6 +20262,24 @@
       <segment>
         <source>Von den Verteidigungsanlagen der Stadt aufgehalten, gingen eure ehemaligen Mitbürger mit leeren Händen und mampften stattdessen die Überreste ihrer eigenen verrottenden Gliedmaßen.</source>
         <target>Arrêtés par les défenses de la ville, vos anciens concitoyens sont repartis bredouilles en grignotant les restes de leurs propres membres en putréfaction.</target>
+      </segment>
+    </unit>
+    <unit id="uAj26XB" name="Schließen">
+      <notes>
+        <note category="german">Schließen</note>
+      </notes>
+      <segment>
+        <source>Schließen</source>
+        <target>Fermer</target>
+      </segment>
+    </unit>
+    <unit id="olizD4j" name="Global">
+      <notes>
+        <note category="german">Global</note>
+      </notes>
+      <segment>
+        <source>Global</source>
+        <target>Global</target>
       </segment>
     </unit>
   </file>
