--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4585,7 +4585,7 @@
       </notes>
       <segment>
         <source>Deine MyHordes-Seele zurücksetzen</source>
-        <target>Deine MyHordes-Seele zurücksetzen</target>
+        <target>Réinitialiser votre âme MyHordes</target>
       </segment>
     </unit>
     <unit id="y9khXik">
@@ -4596,7 +4596,7 @@
       </notes>
       <segment>
         <source>Wenn du eine Seele trotz der Import-Einstränkungen vollständig importieren möchtest, hast du &lt;b&gt;einmalig&lt;/b&gt; die Option, deine MyHordes-Seele zurückzusetzen.</source>
-        <target><![CDATA[Wenn du eine Seele trotz der Import-Einstränkungen vollständig importieren möchtest, hast du <b>einmalig</b> die Option, deine MyHordes-Seele zurückzusetzen.]]></target>
+        <target><![CDATA[Si vous souhaitez importer complètement une âme malgré les <b>restrictions d’importation</b>, vous avez une option unique pour réinitialiser votre âme MyHordes.]]></target>
       </segment>
     </unit>
     <unit id="dsL.BQg" name="Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;betroffen&lt;/b&gt;:">
@@ -4607,7 +4607,7 @@
       </notes>
       <segment>
         <source>Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;betroffen&lt;/b&gt;:</source>
-        <target><![CDATA[Folgende Aspekte deiner Seele sind von diesem Reset <b>betroffen</b>:]]></target>
+        <target><![CDATA[Les aspects suivants de votre âme sont <b>affectés</b> par cette réinitialisation :]]></target>
       </segment>
     </unit>
     <unit id="RPTgSwQ" name="Deine nach dem Ende der Alpha-Phase auf MyHordes erworbenen Seelenpunkte">
@@ -4618,7 +4618,7 @@
       </notes>
       <segment>
         <source>Deine nach dem Ende der Alpha-Phase auf MyHordes erworbenen Seelenpunkte</source>
-        <target>Deine nach dem Ende der Alpha-Phase auf MyHordes erworbenen Seelenpunkte</target>
+        <target>Vos points d’âme gagnés après la fin de la phase alpha sur MyHordes</target>
       </segment>
     </unit>
     <unit id="wRK8LRh">
@@ -4629,7 +4629,7 @@
       </notes>
       <segment>
         <source>Deine nach dem Ende der Alpha-Phase im Rahmen von Städten erworbenen Auszeichnungen (einschließlich Ranking-Auszeichnungen, die am Ende einer Saison vergeben werden!)</source>
-        <target>Deine nach dem Ende der Alpha-Phase im Rahmen von Städten erworbenen Auszeichnungen (einschließlich Ranking-Auszeichnungen, die am Ende einer Saison vergeben werden!)</target>
+        <target>Vos distinctions gagnées dans les villes après la fin de la phase alpha (y compris les distinctions de classement données à la fin d’une saison !)</target>
       </segment>
     </unit>
     <unit id="qGQ4apv" name="Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;nicht betroffen&lt;/b&gt;:">
@@ -4640,7 +4640,7 @@
       </notes>
       <segment>
         <source>Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;nicht betroffen&lt;/b&gt;:</source>
-        <target><![CDATA[Folgende Aspekte deiner Seele sind von diesem Reset <b>nicht betroffen</b>:]]></target>
+        <target><![CDATA[Les aspects suivants de votre âme <b>ne sont pas affectés</b> par cette réinitialisation :]]></target>
       </segment>
     </unit>
     <unit id="YT57JhK">
@@ -4651,7 +4651,7 @@
       </notes>
       <segment>
         <source>Die Liste deiner bisher auf MyHordes gespielten Städte mit allen angehängten Informationen (Todesart, letzte Worte, überlebte Tage, etc)</source>
-        <target>Die Liste deiner bisher auf MyHordes gespielten Städte mit allen angehängten Informationen (Todesart, letzte Worte, überlebte Tage, etc)</target>
+        <target>La liste de vos villes jouées sur MyHordes jusqu’à présent avec toutes les informations jointes (cause du décès, derniers mots, jours de survie, etc.)</target>
       </segment>
     </unit>
     <unit id="VUNm4fP" name="Spezielle Auszeichnungen, wie beispielsweise die Alpha-Auszeichnung">
@@ -4662,7 +4662,7 @@
       </notes>
       <segment>
         <source>Spezielle Auszeichnungen, wie beispielsweise die Alpha-Auszeichnung</source>
-        <target>Spezielle Auszeichnungen, wie beispielsweise die Alpha-Auszeichnung</target>
+        <target>Les distinctions spéciales, comme la distinction de l'Alpha</target>
       </segment>
     </unit>
     <unit id="gYtpBfG" name="Gegenstände in deinem spiritueller Rucksack">
@@ -4673,7 +4673,7 @@
       </notes>
       <segment>
         <source>Gegenstände in deinem spiritueller Rucksack</source>
-        <target>Gegenstände in deinem spiritueller Rucksack</target>
+        <target>Les objets dans votre sac à dos spirituel</target>
       </segment>
     </unit>
     <unit id="E2LwrUJ" name="Deine gespielten Heldentage">
@@ -4684,7 +4684,7 @@
       </notes>
       <segment>
         <source>Deine gespielten Heldentage</source>
-        <target>Deine gespielten Heldentage</target>
+        <target>Le nombre de jours que vous avez joués en tant que héros</target>
       </segment>
     </unit>
     <unit id="K1yAZOB" name="Seelenpunkte oder Auszeichnungen, die du importiert hast">
@@ -4695,7 +4695,7 @@
       </notes>
       <segment>
         <source>Seelenpunkte oder Auszeichnungen, die du importiert hast</source>
-        <target>Seelenpunkte oder Auszeichnungen, die du importiert hast</target>
+        <target>Les points d’âme ou distinctions que vous avez importés</target>
       </segment>
     </unit>
     <unit id="VEBXP0O" name="Meine Seele zurücksetzen">
@@ -4706,7 +4706,7 @@
       </notes>
       <segment>
         <source>Meine Seele zurücksetzen</source>
-        <target>Meine Seele zurücksetzen</target>
+        <target>Réinitialiser mon âme</target>
       </segment>
     </unit>
     <unit id="ZCrhTK8">
@@ -4717,7 +4717,7 @@
       </notes>
       <segment>
         <source>Bitte bestätige, dass du deine Seele zurücksetzen möchtest. Du kannst diese Aktion NUR EIN MAL ausführen. Diese Aktion KANN NICHT RÜCKGÄNGIG GEMACHT WERDEN!</source>
-        <target>Bitte bestätige, dass du deine Seele zurücksetzen möchtest. Du kannst diese Aktion NUR EIN MAL ausführen. Diese Aktion KANN NICHT RÜCKGÄNGIG GEMACHT WERDEN!</target>
+        <target>Veuillez confirmer que vous voulez réinitialiser votre âme. Vous ne pouvez effectuer cette action QU’UNE SEULE FOIS. Cette action ne peut pas être annulée !</target>
       </segment>
     </unit>
   </file>
